--- a/manager/web-async/src/main/webapp/job.xhtml
+++ b/manager/web-async/src/main/webapp/job.xhtml
@@ -31,6 +31,7 @@
                         <p:dataTable id="jobdatatable" var="jobs" value="#{job.list}" editable="true" rows="10"
                                      paginator="true"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                     lazy="true"
                                      rowsPerPageTemplate="5,10,15">
 
                             <f:facet name="header">
