Commit t391 (en weeral een beetje t367) Edit werkt misschien bijna Miischien ook niet Wie zal het zeggen Zeker blijven kijken Olivier

--- a/manager/web-admin/src/main/webapp/index.xhtml
+++ b/manager/web-admin/src/main/webapp/index.xhtml
@@ -72,7 +72,7 @@ and open the template in the editor.
 							Cell Editing with Click and RightClick
 						</f:facet>
 
-							<p:ajax event="cellEdit" listener="#{worker.test}" update=":form:msgs" />
+							<p:ajax event="cellEdit" listener="#{worker.edit}" update=":form:msgs" />
 
 						<p:column headerText="Id">
 							   <p:cellEditor>
