--- a/manager/web-admin/src/main/webapp/index.xhtml
+++ b/manager/web-admin/src/main/webapp/index.xhtml
@@ -104,11 +104,9 @@ and open the template in the editor.
                             </p:column>
 
                             <p:column>
-                                <p:commandButton value="Delete" update="@form" actionListener="#{worker.delete(workers.id)}"/>
+                                <p:commandButton value="Delete" update="@form" actionListener="#{worker.delete(workeredit.id)}"/>
                             </p:column>
-
-
-
+							
                         </p:dataTable>
 
                     </h:form>
