--- a/manager/web-admin/src/main/webapp/index.xhtml
+++ b/manager/web-admin/src/main/webapp/index.xhtml
@@ -70,28 +70,28 @@ and open the template in the editor.
                             <f:facet name="header">Cell Editing with Click</f:facet>
 
                             <p:ajax event="cellEdit" listener="#{worker.edit}" update=":form:ds" />
-                            <p:column headerText="Id">
+                            <p:column headerText="Id" sortBy="#{workeredit.id}" filterBy="#{workeredit.id}" filterMatchMode="contains">
                                 <p:cellEditor>
                                     <f:facet name="output"><h:outputText value="#{workeredit.id}"/></f:facet>
                                     <f:facet name="input"><h:outputText id="modelInput" value="#{workeredit.id}" style="width:96%"/></f:facet>
                                 </p:cellEditor>
                             </p:column>
 
-                            <p:column headerText="Name">
+                            <p:column headerText="Name" sortBy="#{workeredit.name}" filterBy="#{workeredit.name}" filterMatchMode="contains">
                                 <p:cellEditor>
                                     <f:facet name="output"><h:outputText value="#{workeredit.name}" /></f:facet>
                                     <f:facet name="input"><p:inputText value="#{workeredit.name}" style="width:96%" label="Name"/></f:facet>
                                 </p:cellEditor>
                             </p:column>
 
-                            <p:column headerText="URL">
+                            <p:column headerText="URL" sortBy="#{workeredit.URL}" filterBy="#{workeredit.URL}" filterMatchMode="contains">
                                 <p:cellEditor>
                                     <f:facet name="output"><h:outputText value="#{workeredit.URL}" /></f:facet>
                                     <f:facet name="input"><p:inputText value="#{workeredit.URL}" style="width:96%" label="Status"/></f:facet>
                                 </p:cellEditor>
                             </p:column>
 
-                            <p:column headerText="Status">
+                            <p:column headerText="Status" sortBy="#{workeredit.status}" filterBy="#{workeredit.status}" filterMatchMode="contains">
                                 <p:cellEditor>
                                     <f:facet name="output"><h:outputText value="#{workeredit.status}" /></f:facet>
                                     <f:facet name="input">
