--- a/manager/web-async/src/main/webapp/worker.xhtml
+++ b/manager/web-async/src/main/webapp/worker.xhtml
@@ -39,7 +39,7 @@
                             <p:column headerText="Id">
                                 <h:outputText value="#{workers.id}" />
                             </p:column>
-                            <p:column headerText="jobTitle">
+                            <p:column headerText="workerName">
                                 <p:cellEditor>
                                     <f:facet name="output"><h:outputText value="#{workers.workerName}" /></f:facet>
                                     <f:facet name="input"><h:inputText value="#{workers.workerName}" style="width:96%" label="Title" /></f:facet>
