--- a/worker/web/src/main/webapp/index.xhtml
+++ b/worker/web/src/main/webapp/index.xhtml
@@ -13,12 +13,15 @@
           Worker Interface
         </ui:define>
          <ui:define name="content">
-             <div style='width: 35%; float: left; margin-top: 50px; margin-left: 15%'>
+             <div style='width: 25%; float: left; margin-top: 50px; margin-left: 7%;' >
                  <a href="request.xhtml"> <img src="fotos/request.png" style='width: 100%; height: auto; border-left: 5px solid grey; border-top: 5px solid grey; border-bottom: 5px solid grey; border-right: 2.5px solid grey;'/> </a>    
             </div>
-             <div style='width: 35%; float: right; margin-top: 50px; margin-right: 15%;'>
+             <div style='width: 25%; float: left; margin-top: 50px;'>
                 <a href="job.xhtml"> <img src="fotos/job.jpg" style='width: 100%; height: auto;border-left: 2.5px solid grey; border-top: 5px solid grey; border-bottom: 5px solid grey; border-right: 5px solid grey;'/></a>
              </div>
+             <div style='width: 25%; float: left; margin-top: 50px; margin-right: 7%;'>
+                 <a href="worker.xhtml"> <img src="fotos/worker.jpg" style='width: 100%; height: auto; border-left: 2.5px solid grey; border-top: 5px solid grey; border-bottom: 5px solid grey; border-right: 5px solid grey;'/> </a>    
+            </div>
          </ui:define>
     </ui:composition>  
     
