--- a/manager/web-async/src/main/webapp/video.xhtml
+++ b/manager/web-async/src/main/webapp/video.xhtml
@@ -89,7 +89,7 @@
             <b:row>
                 <h1>Rest Controller</h1>
                 <b:panel>
-                    <a href="rest/videos/" target="blank">json >> LocationController</a>
+                    <a href="manager/videos/" target="blank">json >> VideoController</a>
                 </b:panel>
             </b:row>
         </ui:define>
