--- a/client/web/src/main/webapp/register.xhtml
+++ b/client/web/src/main/webapp/register.xhtml
@@ -27,7 +27,7 @@
                 <h:form>
                     <br/>
                     <!-- First name input -->
-                    First Name: <h:inputText class="logcolor" style="margin-right: 850px; margin-left: auto; float: right;"  label="first_name"  value="${users.firstName}" required="true">
+                    First Name: <h:inputText class="logcolor" style="margin-right: 850px; margin-left: auto; float: right;"  label="first_name"  value="${USERS.firstName}" required="true">
                     </h:inputText>
                     <br/><br/>
                     <!-- Last name input -->
@@ -37,7 +37,7 @@
                     <!-- Date of Birth input -->
                     Date of birth: <h:inputText class="logcolor" style="margin-right: 850px; margin-left: auto; float: right;" label="birth_date" value="${users.birthdate}" required="true">
                         <!-- Date of Birth validator -->
-                    </h:inputText>
+                    </h:inputText>user
                     <br/><br/>
                     <!-- Email input -->
                     Email: <h:inputText class="logcolor" style="margin-right: 850px; margin-left: auto; float: right;" label="Email" required="true" value="${users.email}" >
