--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -17,17 +17,6 @@
             <b:row>
 
                 <b:panel>
-
-
-                    <form>
-                        <p:media value="http://www.youtube.com/v/qSjN6r9Up6g" width="420" height="315" player="flash"/>
-                    </form>
-                    
-                    <form>
-                        <p:media value="../media/Crazy_Lama.mp4" width="420" height="315" player="flash"/>
-                        </form>
-
-
                     <h:form>
                         Add Video 
                         <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_name" /> 
@@ -35,6 +24,7 @@
                             <f:selectItem itemLabel="Choose a videopath"/>
                             <f:selectItem itemLabel="Videos/1.mp4" itemValue="Videos/1.mp4"/>
                             <f:selectItem itemLabel="Videos/2.mp4" itemValue="Videos/2.mp4"/>
+                            <f:selectItem itemLabel="Videos/testVid.mp4" itemValue="Videos/testVid.mp4"/>
                         </p:selectOneMenu>
                         <p:selectOneMenu value="#{video.thumbnail}">
                             <f:selectItem itemLabel="Choose a thumbnailpath"/>
@@ -47,9 +37,7 @@
                         <p:watermark for="video_crt_desc" value="Write a description" id="watermark4" />
 
                         <p:commandButton value="Create" update="@form" actionListener="#{video.create}" />
-                        <!--<video width="420" height="315">Testen of het path werkte.
-                            <source src="Videos/1.mp4" type="Video/mp4"/>
-                        </video>-->
+
                         <hr/>
                         <p:dataTable id="tabel" var="vid" value="#{video.list}">
                             <p:column headerText="Id" style="display: none">
@@ -61,14 +49,13 @@
                             <p:column headerText="Name">
                                 <h:outputText value="#{vid.name}" />
                             </p:column>
-                            <p:column headerText="videopath" style="display: none">
-                                <h:outputText value="#{vid.videopath}" />
+                            <p:column headerText="Video" style="width: 430px;">
+                              <!--  <p:media src="#{vid.videopath}" width="420" height="315" player="flash"/>-->
+                                <video width="420" height="315" controls="">
+                                    <source src="#{vid.videopath}" type="Video/mp4"/>
+                                </video>
                             </p:column>
-                            <!-- TEST 
-                                                         <p:column headerText="Video">
-                                                            <p:media value="http://www.youtube.com/embed/qSjN6r9Up6g" player="flash"/>
-                                                        </p:column>
-                            -->
+                           
                             <p:column headerText="description">
                                 <h:outputText value="#{vid.description}" />
                             </p:column>
