videocontainer gecentreerd op de pagina.

--- a/distributor/web/src/main/webapp/common/template.xhtml
+++ b/distributor/web/src/main/webapp/common/template.xhtml
@@ -22,7 +22,7 @@
 
                 </b:jumbotron>
             </b:row>
-            <b:row>
+        <b:row> 
                 <!--                <b:column col-sm="3">
                                     <b:panel look="primary" collapsible="false">
                                         <f:facet name="heading" >Components</f:facet>   
@@ -37,12 +37,13 @@
                                         </b:listLinks>
                                     </b:panel>
                                 </b:column>-->
-                <b:column col-sm="9">
+    <!--       <b:column col-sm="9">  -->
+	<b:column col-md="12">
                     <b:column>
                         <ui:insert name="content"></ui:insert>
                     </b:column>
                 </b:column>
-            </b:row>
+        </b:row>  
         </b:container>
         <!--        <b:container fluid="true">
                     <b:row>
