--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -14,9 +14,9 @@
             <!--            <b:row>
                             <h1>View Component</h1>
                         </b:row>-->
-            <b:row>
+      <b:row>   
 
-                <b:panel>
+                <b:panel class="videocontainer">
                     <h:form>
                         Add Video 
                         <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_name" styleClass="setHeight"/> 
@@ -68,7 +68,7 @@
                     </h:form>
                 </b:panel>
 
-            </b:row>
+         </b:row>   
             <b:row>
                 <h1>Rest Controller</h1>
                 <b:panel>
