--- a/distributor/web/src/main/webapp/video.xhtml
+++ b/distributor/web/src/main/webapp/video.xhtml
@@ -19,24 +19,24 @@
                 <b:panel class="videocontainer">
                     <h:form>
                         Add Video 
-                        <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_name" styleClass="setHeight"/> 
-                        <p:selectOneMenu value="#{video.videopath}" styleClass="setHeight">
+                        <p:inputText value="#{video.name}"  label="Enter videoname here" id="video_crt_name" styleClass="setHeight" class="addVideo"/> 
+                        <p:selectOneMenu value="#{video.videopath}" styleClass="setHeight" class="addVideo2">
                             <f:selectItem itemLabel="Choose a videopath"/>
                             <f:selectItem itemLabel="Videos/1.mp4" itemValue="Videos/1.mp4"/>
                             <f:selectItem itemLabel="Videos/2.mp4" itemValue="Videos/2.mp4"/>
                             <f:selectItem itemLabel="Videos/testVid.mp4" itemValue="Videos/testVid.mp4"/>
                         </p:selectOneMenu>
-                        <p:selectOneMenu value="#{video.thumbnail}" styleClass="setHeight">
+                        <p:selectOneMenu value="#{video.thumbnail}" styleClass="setHeight" class="addVideo2">
                             <f:selectItem itemLabel="Choose a thumbnailpath"/>
                             <f:selectItem itemLabel="Thumbnails/1.jpg" itemValue="Thumbnails/1.jpg"/>
                             <f:selectItem itemLabel="Thumbnails/2.jpg" itemValue="Thumbnails/2.jpg"/>
                         </p:selectOneMenu>                        
-                        <p:inputTextarea value="#{video.description}" label="Write a description" id="video_crt_desc" styleClass="setHeight"/>
+                        <p:inputTextarea value="#{video.description}" label="Write a description" id="video_crt_desc" styleClass="setHeight" class="addVideo2"/>
 
                         <p:watermark for="video_crt_name" value="Enter videoname here" id="watermark" />                        
                         <p:watermark for="video_crt_desc" value="Write a description" id="watermark4" />
 
-                        <p:commandButton value="Create" update="@form" actionListener="#{video.create}" />
+                        <p:commandButton value="Create" update="@form" actionListener="#{video.create}" class="addVideo2"/>
 
                         <hr/>
                         <p:dataTable id="tabel" var="vid" value="#{video.list}">
